# CliTer

./: .gitignore  README.md  cliter.sh  pyproject.toml  requirements.txt
.hermes/plans/: 2026-06-11_cliter-master-plan.md
cliter/: __init__.py  __main__.py  app.py
cliter/config/: defaults.yaml  settings.py
cliter/core/: agent.py  compactor.py  exporter.py  history.py  memory.py  planner.py  session.py  timeline.py
cliter/llm/: __init__.py  base.py  openai_compat.py
cliter/plugins/: loader.py
cliter/proxy/: __init__.py  default_providers.yaml  manager.py  monitor.py  nine_router.py  pool.py  router.py  server.py  strategy.py  tracker.py
cliter/services/: __init__.py  geotracker.py  net_scanner.py  offline_kb.py  p2p.py  sync.py  termux_api.py
cliter/skills/: loader.py  manager.py
cliter/skills/builtin/: default.md
cliter/tools/: base.py  exploit_suggester.py  file_ops.py  python_eval.py  registry.py  self_improve.py  terminal.py  web.py
cliter/ui/: action_bar.py  chat_panel.py  dashboard_screen.py  input_box.py  memory_screen.py  modal.py  network_screen.py  provider_screen.py  search_bar.py  sidebar.py  status_bar.py  strategy_screen.py  theme.py  toast.py
cliter/utils/: clipboard.py  log.py  paths.py
docs/: index.html  location.html  location.json
